--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,11 @@
             <version>${flink.version}</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-api-java</artifactId>
             <version>${flink.version}</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -64,30 +64,26 @@
             <version>${flink.version}</version>
         </dependency>
 
-
-        <!-- 如果要用scala做开发，则需要添加如下依赖  -->
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-
-
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-scala_2.12</artifactId>
+            <artifactId>flink-table-planner_2.12</artifactId>
             <version>${flink.version}</version>
         </dependency>
 
 
+
+
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-scala_2.12</artifactId>
+            <artifactId>flink-clients_2.12</artifactId>
             <version>${flink.version}</version>
         </dependency>
-        <!-- 如果要用scala做开发，则需要添加如下依赖  -->
 
-
+        <dependency>
+            <groupId>org.apache.doris</groupId>
+            <artifactId>flink-doris-connector-1.14_2.12</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -95,6 +91,11 @@
             <version>${flink.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
         <!-- 打印日志的jar包 -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -150,7 +151,7 @@
         </dependency>
 
         <!-- flink-cdc-mysql 连接器-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-sql-connector-mysql-cdc</artifactId>
             <version>2.3-SNAPSHOT</version>
@@ -160,7 +161,7 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-hbase-2.2_2.12</artifactId>
             <version>${flink.version}</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
@@ -237,7 +238,7 @@
             </plugin>
 
 
-            <plugin>
+            <!--<plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>4.3.1</version>
@@ -255,7 +256,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
 
             <plugin>
