--- a/pom.xml
+++ b/pom.xml
@@ -156,12 +156,12 @@
             <artifactId>flink-sql-connector-mysql-cdc</artifactId>
             <version>2.3-SNAPSHOT</version>
         </dependency>
-
+        -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-hbase-2.2_2.12</artifactId>
             <version>${flink.version}</version>
-        </dependency>-->
+        </dependency>
 
 
         <dependency>
