--- a/pom.xml
+++ b/pom.xml
@@ -151,11 +151,11 @@
         </dependency>
 
         <!-- flink-cdc-mysql 连接器-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-sql-connector-mysql-cdc</artifactId>
             <version>2.3-doitedu</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
