--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>com.ververica</groupId>
             <artifactId>flink-sql-connector-mysql-cdc</artifactId>
-            <version>2.3-doitedu</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
