--- a/pom.xml
+++ b/pom.xml
@@ -157,11 +157,11 @@
             <version>2.3-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-hbase-2.2_2.12</artifactId>
             <version>${flink.version}</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
@@ -192,6 +192,12 @@
             <groupId>org.codehaus.gmaven</groupId>
             <artifactId>groovy-maven-plugin</artifactId>
             <version>2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.4.9</version>
         </dependency>
 
 
