--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>${flink.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_2.12</artifactId>
+            <version>1.14.4</version>
+        </dependency>
 
 
 
