学大数据，上多易教育

--- a/rtdw/pom.xml
+++ b/rtdw/pom.xml
@@ -45,7 +45,11 @@
         </dependency>
 
 
-
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep_2.12</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
         <!-- hudi-bundle 需要用hive，居然需要手动加-->
         <dependency>
