--- a/rtdw/pom.xml
+++ b/rtdw/pom.xml
@@ -80,6 +80,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-hbase-2.2_2.12</artifactId>
+            <version>1.14.4</version>
+        </dependency>
+
+
+
+        <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
             <version>3.1.3</version>
